# tp2_prng_ensiie

./: README.md
lois_proba/: Cargo.toml
lois_proba/src/: analysis.rs  main.rs
