[package]
name = "lois_proba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.4"
plotters-svg = "0.3.3"
rand = {version = "0.8.5", features = ["small_rng"]}
rand_xoshiro = "0.6.0"
statrs = "0.16.0"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false